# spotify-playlists-creator

./: README.md  pyproject.toml
data/: dracarys.txt  old_but_gold.txt
spotify_playlists_creator/: __main__.py  app.py  authentication.py  create_playlist_with_input_songs.py  get_songs_ids.py  session.py  session_streamlit.py
spotify_playlists_creator/pages/: callback.py
