[tool.poetry]
name = "spotify-playlists-creator"
version = "0.1.0"
description = "Spotify playlists creator"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
